Décompilation reproductible (libs/game.jar) + preuve de réutilisation du codec du jeu
- tools/decompile.sh : APK -> libs/game.jar via dex2jar (de.femtopedia.dex2jar sur
  Maven Central, car les releases GitHub sont bloquées par le proxy) + commons-logging.
- server/smoke/CodecRoundTrip.java : charge DHXORConnectionWrapper DU JEU et vérifie
  wrapOut/wrapIn round-trip sur JVM desktop -> le codec réseau du jeu est réutilisable
  côté serveur sans réimplémentation. Clé XOR recoupée (CE 85 D4 F9 29 A8 24 56).
- Contraintes de chargement documentées dans docs/SHIMS.md (-Xverify:none pour les
  stackmap frames manquantes de dex2jar ; commons-logging au classpath).
- .gitignore : *.class, *-error.zip. MEMORY/JOURNAL mis à jour.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01X8YZTb9Pz94YMCoQpe5N13